# subtitle-generator

./: IMG_3772.srt  README.md  pyproject.toml
src/whisper_srt/: __init__.py  main.py
